# solaris-tools

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  run_tests.sh  tox.ini
pointing/: altaz_scan_error.py
scripts/: check_errors_over_time.py  fit_offset_models.py  plot_trajectories.py
temp/: plot_pointing_errors.py  puntamento_del_az-el.csv  refraction_cg.py  refraction_ge.py
templates/: offsets_example.tsv  puntamento_del_az-el.tsv
tests/: test_altaz_scan_error.py
